General
- OpenSSF scorecard badge added.
- YASM support removed.
- CMake library only build option added.
- CET support added to CMake build.
- Replaced Makefiles with CMake as default build system.
- Man pages installation path fixed.
- Improved CMake project definitions and installation paths.
- Added FreeBSD CMake builds to workflows.
- Updated style check to clang-format version 18.

Library
- AES-GCM changes
  - Reduced binary size of AVX512 type 2 and AVX2 type 1 code by re-using internal GHASH functions.
  - Optimized small packets for AVX512 type 2 (1 to 256 bytes).
  - Removed specialized AVX512 type 1 and AVX2 type 1 is used instead.
  - Implemented multiply reduce optimization for GHASH AVX2 type 1.
  - Slightly improved large buffer performance for AVX2 type 1.
  - Added new AVX2 type 2 implementation.
- DES, 3DES/TDES and DES-DOCSIS binary size reduction.
  - reduced stack frame size for DES and DES-DOCSIS.
  - re-used common transpose macros in the implementation.
- Fixed LFSR update in single buffer ZUC API implementation.
- SM4 changes:
  - Added SM4-CTR and SM4-GCM SSE implementations.
  - Added AVX2-SM4-NI implementation for SM4-GCM, SM4-CTR, SM4-CBC and SM4-ECB.
- SHA2-512/384 changes:
  - Added SHA2-512/384 update AVX2-SHA512-NI single-buffer implementation.
  - Added SHA2-512/384 and HMAC-SHA2-512/384 AVX2-SHA512-NI x2 multi-buffer implementations.
- Added SM3 and SM3-HMAC SM3-NI implementations.
- Added AES-CFB SSE type 1 and AVX512 type 2 implementations.
- Removed features:
  - Removed AESNI emulation support.
  - Removed AVX Type 2 implementation.
  - Removed AES-CMAC, AES-CCM, AES-CBC and AES-ECB x4 and by4 implementations from SSE type 1.
    - They are replaced with x8 and by8 implementations from SSE type 3.
  - Removed AVX type 1 implementations: SHA/MD5, CHACHA20-POLY1305, SNOW3G and KASUMI.
  - Moved remaining AVX type 1 implementations into AVX2 type 1.
  - Removed AVX architecture type.